security/cert-manager/k8s/_namespace.yaml
# cert-manager Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
  labels:
    tier: middleware
    type: security
    app: cert-manager
    istio-injection: disabled
