security/cert-manager/k8s/service.yaml
# Service for webhook
apiVersion: v1
kind: Service
metadata:
  name: cert-manager-webhook
  namespace: cert-manager
  labels:
    tier: middleware
    type: security
    app: webhook
spec:
  type: ClusterIP
  ports:
  - name: https
    port: 443
    targetPort: https
    protocol: TCP
  selector:
    app: webhook

---
# Service for metrics
apiVersion: v1
kind: Service
metadata:
  name: cert-manager-metrics
  namespace: cert-manager
  labels:
    tier: middleware
    type: security
    app: cert-manager
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9402"
spec:
  type: ClusterIP
  ports:
  - name: metrics
    port: 9402
    targetPort: metrics
    protocol: TCP
  selector:
    app: cert-manager
